# smabo

./: CMakeLists.txt  HAL.md  README.md  dashboard.yaml  default.rviz  main.rviz  package.xml  rcalib.rviz  rcalib.yaml  rcalib.zui  recipe  setup.py  setup.zui
config/: fcam.yaml  rcalib.yaml  vcam.yaml  vt.yaml  wall_eye.yaml
desktop/: DockerBash.desktop  DockerStart.desktop  VT.desktop
launch/: fcam.launch  rcalib.launch  start.launch  vcam.launch  viewer.launch  vt.launch
rcalib/: camera_master0.ply  camera_master0.yaml  param.yaml
recipe.d/S10/: param.yaml
script/: config_tf.py  cropper.py  mover.py  picker.py  rcalib.py  searcher.py  vcam.py  ycam3.py
src/smabo/: cv2_solver.py  feature_solver.py  icp_solver.py  ransac_solver.py  tflib.py
